--- a/src/index.html
+++ b/src/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" media="screen" href="main.css" />
     <script type="text/javascript" src="ui.js"></script>
-    <script type="text/javascript" async src="MathJax/MathJax.js"></script>
+    <script type="text/javascript" async id="MathJax" src="MathJax/MathJax.js"></script>
 </head>
 <body>
 </body>
