--- a/src/index.html
+++ b/src/index.html
@@ -7,6 +7,19 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" media="screen" href="main.css" />
     <script type="text/javascript" src="ui.js"></script>
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-24316761-3"></script>
+    <script>
+        // Disable analytics locally.
+        if (window.location.hostname === "") {
+            window["ga-disable-UA-24316761-3"] = true;
+        }
+        window.dataLayer = window.dataLayer || [];
+        function gtag(){dataLayer.push(arguments);}
+        gtag('js', new Date());
+
+        gtag('config', 'UA-24316761-3');
+    </script>
 </head>
 <body>
 </body>
