--- a/src/arrow.html
+++ b/src/arrow.html
@@ -64,6 +64,92 @@
             }
         }
 
+        /// A helper class for dealing with symmetric quadratic Bézier curves.
+        class Bezier {
+            constructor(start, end, height) {
+                this.start = start;
+                this.end = end;
+                this.height = height;
+
+                // The control point. This is twice the distance from the straight line connecting `start`
+                // and `end` as `height`.
+                const midpoint = this.start.add(this.end).div(2);
+                const normal = this.end.sub(this.start).atan() + Math.PI / 2;
+                this.control = midpoint.add(Point.from_length_and_direction(this.height, normal));
+            }
+
+            /// Returns the (x, y)-point at t = `t`.
+            point(t) {
+                return this.start.lerp(this.control, t).lerp(this.control.lerp(this.end, t), t);
+            }
+
+            /// Returns the angle of the curve at t = `t`.
+            angle(t) {
+                return this.control.lerp(this.end, t).sub(this.start.lerp(this.control, t)).atan();
+            }
+
+            /// Returns the Bézier curve from t = 0 to t = `t` as a series of points corresponding
+            /// to line segments, and their total length.
+            /// `{ points, length }`
+            delineate(t) {
+                // How many pixels of precision we want for the length.
+                const EPSILON = 0.25;
+
+                // Start with a single, linear segment.
+                const points = [[0, this.point(0)], [t, this.point(t)]];
+
+                let previous_length;
+                let length = 0;
+
+                do {
+                    // Calculate the current approximation of the arc length.
+                    previous_length = length;
+                    length = 0;
+                    for (let i = 0; i < points.length - 1; ++i) {
+                        length += points[i + 1][1].sub(points[i][1]).length();
+                    }
+                } while (length - previous_length > EPSILON && (() => {
+                    // If we're still not within the required precision, double the number of segments.
+                    for (let i = 0; i < points.length - 1; ++i) {
+                        const t = (points[i][0] + points[i + 1][0]) / 2;
+                        points.splice(++i, 0, [t, this.point(t)]);
+                    }
+                    return true;
+                })());
+
+                return { points, length };
+            }
+
+            /// Returns the arc length of the Bézier curve from t = 0 to t = `t`.
+            /// These Bézier curves are symmetric, so t = `t` to t = 1 can be calculated by inverting the
+            /// arc length from t = 0.
+            arc_length(t) {
+                const { length } = this.delineate(t);
+                return length;
+            }
+
+            /// Returns a function giving the parameter t of the point a given length along the arc of
+            /// the Bézier curve. (It returns a function, rather than the t for a length, to allow
+            /// the segments to be cached for efficiency).
+            /// The returned function does no error-checking, so ensure that it is only called with
+            /// lengths between 0 and the arc length of the curve.
+            t_after_length() {
+                const { points } = this.delineate(1);
+                return (length) => {
+                    let distance = 0;
+                    for (let i = 0; i < points.length - 1; ++ i) {
+                        const segment_length = points[i + 1][1].sub(points[i][1]).length();
+                        if (distance + segment_length >= length) {
+                            // Lerp the t parameter.
+                            return points[i][0]
+                                + (points[i + 1][0] - points[i][0]) * (length - distance) / segment_length;
+                        }
+                        distance += segment_length;
+                    }
+                };
+            }
+        }
+
         class Arrow {
             constructor(source, target) {
                 this.source = source;
@@ -81,7 +167,12 @@
                 const SPACING = 4.5;
                 const STROKE_WIDTH = 1.5;
 
-                const PADDING_Y = 0;
+                const body_shape = "squiggly";
+
+                // The height (in pixels) of each triangle from the edge.
+                const AMPLITUDE = 2;
+
+                const PADDING_Y = body_shape === "squiggly" ? (AMPLITUDE + STROKE_WIDTH) * 2 : 0;
 
                 const line_width = level * STROKE_WIDTH + (level - 1) * SPACING;
 
@@ -136,7 +227,7 @@
                         rect.y,
                         rect.width,
                         rect.height,
-                        new Bezier(new Point(this.source.x, this.source.y), angle, length, curve),
+                        new NormalisedBezier(new Point(this.source.x, this.source.y), angle, length, curve),
                         resolve,
                     );
                     for (const inter of intersections) {
@@ -153,7 +244,6 @@
                 const start = ir("none", this.source, true);
                 const end = ir("none", this.target, false);
 
-                const body_shape = "none";
                 let path;
                 if (body_shape === "none") {
                     path = `
@@ -161,7 +251,70 @@
                         q ${length / 2} ${curve} ${length} 0
                     `;
                 } else if (body_shape === "squiggly") {
+                    if (start === null || end === null) {
+                        console.error("no start/end");
+                    }
+                    // When we draw squiggly lines, we essentially have to draw the
+                    // Bézier curve by ourselves, using line segments, so that we can
+                    // transform it (i.e. add the triangle waveform pattern).
+                    const bezier = new Bezier(Point.zero(), new Point(length, 0), curve);
 
+                    // Each triangle has a width equal to twice its height.
+                    const HALF_WAVELENGTH = AMPLITUDE * 2;
+
+                    // Padding at the start of the edge (measured in triangles), where the curve
+                    // will be flat (though possibly curved).
+                    const PADDING = 1;
+
+                    // We provide twice as much padding for the head as for the tail.
+                    const heads = 1;
+                    const head_padding = PADDING * (1 + heads);
+
+                    path = `M 0 ${height / 2}`;
+
+                    // Draw the padding at the tail of the arrow.
+                    const SVG_PADDING = 0;
+                    const line_length = length;
+                    const angle = bezier.angle(0);
+
+                    const arc_length = bezier.arc_length(end.t) - bezier.arc_length(start.t);
+                    const t_after_length = bezier.t_after_length();
+                    const squiggle_length = bezier.arc_length(end.t) - (HEAD_WIDTH + HALF_WAVELENGTH * head_padding);
+
+                    // should really be tail width
+                    const st = bezier.arc_length(start.t) + HEAD_WIDTH + HALF_WAVELENGTH * head_padding;
+                    let ll = t_after_length(st);
+                    let lp = bezier.point(ll);
+                    path += `l ${lp.x} ${lp.y}`;
+
+                    for (
+                        // The current (arc) length along the curve.
+                        let l = st,
+                        // Which direction to draw the triangle (`-1` or `1`).
+                        sign = -1,
+                        // Whether to draw offset by `AMPLITUDE` (`1`) or not (`0`).
+                        m = 1;
+                        l + m * HALF_WAVELENGTH / 2 < squiggle_length;
+                        // Flip the direction of the triangle each time a triangle
+                        // is drawn. We alternate between drawing tips and bases of
+                        // the triangles.
+                        sign = [sign, -sign][m], m = 1 - m
+                    ) {
+                        l += HALF_WAVELENGTH / 2;
+                        const t = t_after_length(l);
+                        const point = bezier.point(t);
+                        const angle = bezier.angle(t) + Math.PI / 2 * sign;
+                        path += `L ${
+                            point.x + Math.cos(angle) * AMPLITUDE * m
+                        } ${
+                            height / 2 + point.y + Math.sin(angle) * AMPLITUDE * m
+                        }`;
+                    }
+
+                    // Draw the padding at the head of the arrow.
+                    path += `L ${SVG_PADDING + line_length} ${
+                        SVG_PADDING + height / 2
+                    }`;
                 }
 
                 let cut = true;
@@ -340,14 +493,19 @@
             }, { passive: false });
 
             window.addEventListener("keydown", (event) => {
+                let redraw = false;
                 if (event.key === "ArrowLeft") {
                     --level;
+                    redraw = true;
                 }
                 if (event.key === "ArrowRight") {
                     ++level;
+                    redraw = true;
                 }
                 level = Math.max(1, level);
-                arrow.redraw();
+                if (redraw) {
+                    arrow.redraw();
+                }
             })
         });
 
@@ -361,14 +519,14 @@
         /// approximate rounded rectangles by rectanges for the sake of finding intersections.
         function intersect_bezier_with_rect(x, y, w, h, b, min = true) {
             let points = new Array(4).fill(null).map(() => new Point(x, y));
-            points[0].sub(new Point(w/2, h/2));
-            points[1].sub(new Point(-w/2, h/2));
-            points[2].sub(new Point(-w/2, -h/2));
-            points[3].sub(new Point(w/2, -h/2));
+            points[0] = points[0].sub(new Point(w/2, h/2));
+            points[1] = points[1].sub(new Point(-w/2, h/2));
+            points[2] = points[2].sub(new Point(-w/2, -h/2));
+            points[3] = points[3].sub(new Point(w/2, -h/2));
 
             let intersections = [];
             let h_scale = b.h || 1;
-            points = points.map((p) => normalise_point(p, new Bezier(b.o, b.theta, b.l, h_scale)));
+            points = points.map((p) => normalise_point(p, new NormalisedBezier(b.o, b.theta, b.l, h_scale)));
 
             const EPSILON = 10 ** (-10);
 
@@ -434,7 +592,7 @@
 
             // Derivative of Bézier curve is `2 - 4x`.
             return intersections.slice(0, 1)
-                .map(p => Object.assign({ angle: Math.atan2((2 - 4 * p.x) * h_scale, b.l) }, p.scale(b.l, h_scale)));
+                .map(p => Object.assign({ t: p.x, angle: Math.atan2((2 - 4 * p.x) * h_scale, b.l) }, p.scale(b.l, h_scale)));
         }
 
         /// Intersect the line `y = m x + c` with the normalised quadratic Bézier curve and return
@@ -459,15 +617,15 @@
         /// Normalise a point `p` with respect to the Bézier curve `b`.
         function normalise_point(p, b) {
             // Translate the point with respect to the origin.
-            p.sub(b.o);
+            p = p.sub(b.o);
             // Rotate -θ around the origin.
-            p.rotate(-b.theta);
+            p = p.rotate(-b.theta);
             // Scale the point horizontally and vertically.
-            p.inv_scale(b.l, b.h);
+            p = p.inv_scale(b.l, b.h);
             return p;
         }
 
-        class Bezier {
+        class NormalisedBezier {
             /// A Bézier curve with origin `o`, angle `theta`, length `l` and (control point)
             /// height `h`.
             constructor(o, theta, l, h) {
@@ -484,30 +642,55 @@
                 this.y = y;
             }
 
+            static zero() {
+                return new Point(0, 0);
+            }
+
+            static from_length_and_direction(length, direction) {
+                return new Point(Math.cos(direction) * length, Math.sign(direction) * length);
+            }
+
+            add(p) {
+                return new (this.constructor)(this.x + p.x, this.y + p.y);
+            }
+
             sub(p) {
-                this.x -= p.x;
-                this.y -= p.y;
-                return this;
+                return new (this.constructor)(this.x - p.x, this.y - p.y);
+            }
+
+            mul(multiplier) {
+                return new (this.constructor)(this.x * multiplier, this.y * multiplier);
+            }
+
+            div(divisor) {
+                return new (this.constructor)(this.x / divisor, this.y / divisor);
             }
 
             rotate(theta) {
-                [this.x, this.y] = [
+                return new (this.constructor)(
                     this.x * Math.cos(theta) - this.y * Math.sin(theta),
                     this.y * Math.cos(theta) + this.x * Math.sin(theta),
-                ];
-                return this;
+                );
             }
 
             scale(w, h) {
-                this.x *= w;
-                this.y *= h;
-                return this;
+                return new (this.constructor)(this.x * w, this.y * h);
             }
 
             inv_scale(w, h) {
-                this.x /= w;
-                this.y /= h;
-                return this;
+                return new (this.constructor)(this.x / w, this.y / h);
+            }
+
+            lerp(other, t) {
+                return this.add(other.sub(this).mul(t));
+            }
+
+            atan() {
+                return Math.atan2(this.y, this.x);
+            }
+
+            length() {
+                return Math.hypot(this.y, this.x);
             }
         }
     </script>
