--- a/src/index.html
+++ b/src/index.html
@@ -6,6 +6,9 @@
     <link rel="icon" href="icon.png">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" media="screen" href="main.css" />
+    <script type="text/javascript" src="ds.js"></script>
+    <script type="text/javascript" src="dom.js"></script>
+    <script type="text/javascript" src="quiver.js"></script>
     <script type="text/javascript" src="ui.js"></script>
     <!-- Global site tag (gtag.js) - Google Analytics -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=UA-24316761-3"></script>
